--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
   <meta name="viewport" content="width=375, minimum-scale=1, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>niconicocoa 発表スライド上にニコニコ風コメントが流せるサービス</title>
-  <meta name="description" content="マイナンバーが素数かどうか安心してチェックできるサイト〜安心して下さい。保存してないですよ。〜">
-  <meta name="keywords" content="素数,とにかく明るい安村,マイナンバー">
-  <meta property="og:title" content="マイナンバーが素数かどうか安心してチェックできるサイト">
+  <meta name="description" content="発表スライド上にニコニコ風コメントが流せるサービス">
+  <meta name="keywords" content="スライド,コメント,ニコニコ,milkcocoa">
+  <meta property="og:title" content="niconicocoa">
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://nabettu.github.io/niconicocoa/">
-  <meta property="og:image" content="http://nabettu.github.io/niconicocoa/ogp2.png">
-  <meta property="og:site_name" content="マイナンバーが素数かどうか安心してチェックできるサイト">
-  <meta property="og:description" content="安心して下さい。保存してないですよ。">
-  <meta property="fb:app_id" content="850799675019013">
+  <meta property="og:image" content="http://nabettu.github.io/niconicocoa/ogp.png">
+  <meta property="og:site_name" content="niconicocoa">
+  <meta property="og:description" content="発表スライド上にニコニコ風コメントが流せるサービス">
+  <meta property="fb:app_id" content="">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="マイナンバーが素数かどうか安心してチェックできるサイト">
-  <meta name="twitter:description" content="安心して下さい。保存してないですよ。">
-  <meta name="twitter:image" content="http://nabettu.github.io/niconicocoa/ogp2.png">
+  <meta name="twitter:title" content="niconicocoa">
+  <meta name="twitter:description" content="発表スライド上にニコニコ風コメントが流せるサービス">
+  <meta name="twitter:image" content="http://nabettu.github.io/niconicocoa/ogp.png">
   <meta name="twitter:site" content="http://nabettu.github.io/niconicocoa/">
   <link rel="shortcut icon" href="./favicon.ico">
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -32,8 +32,8 @@
   <h1>niconicocoa</h1>
   <p>発表スライド上にニコニコ風コメントが流せるサービス</p>
 
-  <input type="text" id="js-inputText" placeholder="ワロタｗｗｗ" />
-  <button class="btn btn-default" id="js-submitBtn">送信</button>
+  <input type="text" id="js_inputText" placeholder="ワロタｗｗｗ" />
+  <button class="btn btn-default" id="js_submitBtn">送信</button>
 
   <div class="shareArea">
     <p>このサービスをシェア</p>
